<resources>
    <string name="app_name">Tesla Wear Fob</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Tesla Key Card generating.</string>
    <string name="servicedesc">Tesla Key for WearOS</string>
    <string name="aiddescription">Tesla Key</string>

    <string name="unlock_desc">Unlock your tesla</string>

    <string name="about">Created by Tom Meyers</string>
    <string name="button">About</string>
    <string name="about_button">Open About</string>
    <string name="LICENSE_HEADER">LICENSE</string>
    <string name="LICENSE">Loading</string>
</resources>