<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:deviceIds="wear"
        android:padding="@dimen/box_inset_layout_padding">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp">

            <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/about"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="100dp"/>

            <TextView
                    android:id="@+id/HEADER"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/LICENSE_HEADER"
                    android:layout_marginTop="@dimen/margins"
                    android:layout_below="@+id/text"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true" />

            <TextView
                    android:id="@+id/license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/LICENSE"
                    android:layout_marginTop="@dimen/margins"
                    android:layout_below="@+id/HEADER"
                    android:layout_marginEnd="@dimen/margins"
                    android:layout_marginStart="@dimen/margins"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true" />
        </RelativeLayout>
    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>